# parashader

./: .gitignore  CMakeLists.txt  Makefile  README  argparser.h  bag.h  camera.cpp  edge.cpp  face.h  green_mosaic.ppm  hit.h  material.cpp  material.h  matrix.cpp  mesh.h  radiosity.cpp  radiosity.h  raytracer.cpp  raytree.cpp  raytree.h  rocks.ppm  vertex.h  vertex_parent.h
acg-doc/: .gitignore  CMakeLists.txt  Makefile  blue_gene_bounces_plot.eps  blue_gene_pixels_plot.eps  parallel_raytracing.tex  parashader.bib  proposal.tex  proposal.tex~  taro_desktop_plot.eps
results/: 1240524277.ppm  1240524289.ppm  1240524296.ppm  1240538095.ppm  1240538107.ppm  Makefile  blue_gene_bounces_plot.gnuplot  blue_gene_bounces_plot.txt  blue_gene_pixels_plot.gnuplot  blue_gene_pixels_plot.txt  desktop_script.sh  taro_desktop_plot.gnuplot  taro_desktop_plot.txt  timings-test1.gnuplot  timings-test1.txt  timings-test2.gnuplot  timings-test2.txt
src/: .gitignore  CMakeLists.txt  Makefile  argparser.h  bag.h  boundingbox.h  camera.h  controller.cpp  controller.h  edge.h  face.cpp  face.h  glCanvas.cpp  glCanvas.h  hit.h  image.cpp  image.h  main.cpp  material.cpp  material.h  matrix.h  mesh.cpp  mesh.h  output.cpp  output.h  radiosity.cpp  radiosity.h  ray.h  raytracer.cpp  raytracer.h  sphere.cpp  sphere.h  test_ppm.cpp  utils.h  vectors.h
